# cmake_study

./: CMakeLists.txt  foo.cpp
_builds/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  foo.elf.vcxproj  foo.elf.vcxproj.filters  foo.sln
_builds/Debug/: foo.elf  foo.ilk
_builds/foo.elf.dir/Debug/foo.elf.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  foo.elf.lastbuildstate  foo.elf.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
_builds/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
_builds/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
_builds_makefile/: CMakeCache.txt  Makefile  cmake_install.cmake  foo.elf
